made some changes to Nllb converter to support different endpoints (e.g. a computer on the local network), authentication (querying for a different API key and port if the user decides to use them in the github repo and bug fixes after testing w/ NLLB 600 and 1.3

--- a/src/EcTranslators/Properties/Settings.settings
+++ b/src/EcTranslators/Properties/Settings.settings
@@ -56,9 +56,15 @@
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="NllbTranslatorKey" Type="System.String" Scope="User">
-      <Value Profile="(Default)">R2HnnkY7wjy5XeaTWPpfig==</Value>
+      <Value Profile="(Default)">N3RK/o+wYtvEFMVGtYsmROIyLr/+RWh1</Value>
     </Setting>
     <Setting Name="NllbTranslatorKeyOverride" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="NllbTranslatorEndpoint" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://localhost:8000</Value>
+    </Setting>
+    <Setting Name="NllbTranslatorEndpointOverride" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
