--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -162,6 +162,12 @@
     <Compile Include="NllbTranslator\NllbTranslatorEncConverter.cs" />
     <Compile Include="NllbTranslator\NllbTranslator.cs" />
     <Compile Include="NllbTranslator\NllbTextResult.cs" />
+    <Compile Include="NllbTranslator\QueryForEndpointAndApiKey.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NllbTranslator\QueryForEndpointAndApiKey.Designer.cs">
+      <DependentUpon>QueryForEndpointAndApiKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -209,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NllbTranslator\NllbTranslatorAutoConfigDialog.resx">
       <DependentUpon>NllbTranslatorAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NllbTranslator\QueryForEndpointAndApiKey.resx">
+      <DependentUpon>QueryForEndpointAndApiKey.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
