--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="SilEncConverters40.EcTranslators.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SilEncConverters40.EcTranslators.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -137,18 +140,25 @@
                     </ArrayOfString>
                 </value>
             </setting>
-            <setting name="NllbTranslatorKey" serializeAs="String">
-                <value>N3RK/o+wYtvEFMVGtYsmROIyLr/+RWh1</value>
-            </setting>
             <setting name="NllbTranslatorKeyOverride" serializeAs="String">
                 <value />
-            </setting>
-            <setting name="NllbTranslatorEndpoint" serializeAs="String">
-                <value>http://localhost:8000</value>
             </setting>
             <setting name="NllbTranslatorEndpointOverride" serializeAs="String">
                 <value />
             </setting>
+            <setting name="NllbTranslatorPathToDockerProject" serializeAs="String">
+                <value />
+            </setting>
         </SilEncConverters40.EcTranslators.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <SilEncConverters40.EcTranslators.Properties.Settings>
+            <setting name="NllbTranslatorKey" serializeAs="String">
+                <value>N3RK/o+wYtvEFMVGtYsmROIyLr/+RWh1</value>
+            </setting>
+            <setting name="NllbTranslatorEndpoint" serializeAs="String">
+                <value>http://localhost:8000</value>
+            </setting>
+        </SilEncConverters40.EcTranslators.Properties.Settings>
+    </applicationSettings>
 </configuration>
