--- a/src/EcTranslators/Properties/Settings.settings
+++ b/src/EcTranslators/Properties/Settings.settings
@@ -55,16 +55,19 @@
   &lt;string&gt;UseSystemPrompt: Translate from Hindi into English.&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
-    <Setting Name="NllbTranslatorKey" Type="System.String" Scope="User">
+    <Setting Name="NllbTranslatorKey" Type="System.String" Scope="Application">
       <Value Profile="(Default)">N3RK/o+wYtvEFMVGtYsmROIyLr/+RWh1</Value>
     </Setting>
     <Setting Name="NllbTranslatorKeyOverride" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="NllbTranslatorEndpoint" Type="System.String" Scope="User">
+    <Setting Name="NllbTranslatorEndpoint" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://localhost:8000</Value>
     </Setting>
     <Setting Name="NllbTranslatorEndpointOverride" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="NllbTranslatorPathToDockerProject" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
