add a protocol to cause the NLLB Translator to start to split text to translate into smaller chunks. If it gets too big, it starts to leave stuff out.

--- a/src/EcTranslators/Properties/Settings.settings
+++ b/src/EcTranslators/Properties/Settings.settings
@@ -67,5 +67,11 @@
     <Setting Name="NllbTranslatorPathToDockerProject" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="NllbSentenceFinalPunctuationRegex" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">(.*?)([\p{Po}-[,]])</Value>
+    </Setting>
+    <Setting Name="NllbProcessSentenceBySentence" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
