--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -156,6 +156,12 @@
             <setting name="NllbTranslatorEndpoint" serializeAs="String">
                 <value>http://localhost:8000</value>
             </setting>
+            <setting name="NllbSentenceFinalPunctuationRegex" serializeAs="String">
+                <value>(.*?)([\p{Po}-[,]])</value>
+            </setting>
+            <setting name="NllbProcessSentenceBySentence" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SilEncConverters40.EcTranslators.Properties.Settings>
     </applicationSettings>
 </configuration>
