use a flag so that we don't re-initialize an ICU Transliterator for each call to Convert. And fixed a bug where we couldn't edit an existing custom transliterator.

--- a/src/IcuEC/Properties/Settings.settings
+++ b/src/IcuEC/Properties/Settings.settings
@@ -4,15 +4,17 @@
   <Settings>
     <Setting Name="RecentRegExpressions" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
   &lt;string&gt;[aeiou]-&amp;gt;V /i&lt;/string&gt;
   &lt;string&gt;[^aeiou]-&amp;gt;C /i&lt;/string&gt;
+  &lt;string&gt;[\u0027\u002a\u2018\u2019\u201c\u201d\u0303\u0304\u0310\u0314\u0325\u200c\u200d\uE03C\uFFFD]-&amp;gt;&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="RecentCustomTransliterators" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
   &lt;string&gt;NFD; [:Nonspacing Mark:] Remove; NFC&lt;/string&gt;
+  &lt;string&gt;Any-Latin; NFD; [:Nonspacing Mark:] Remove; NFC&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
   </Settings>
