--- a/src/IcuEC/app.config
+++ b/src/IcuEC/app.config
@@ -7,22 +7,24 @@
 	</configSections>
 	<userSettings>
 		<IcuEC.Properties.Settings>
-			<setting name="RecentRegExpressions" serializeAs="Xml">
-				<value>
-					<ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-						<string>[aeiou]-&gt;V /i</string>
-						<string>[^aeiou]-&gt;C /i</string>
-					</ArrayOfString>
-				</value>
-			</setting>
-			<setting name="RecentCustomTransliterators" serializeAs="Xml">
-				<value>
-					<ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-						<string>NFD; [:Nonspacing Mark:] Remove; NFC</string>
-					</ArrayOfString>
-				</value>
-			</setting>
-		</IcuEC.Properties.Settings>
+   <setting name="RecentRegExpressions" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      <string>[aeiou]-&gt;V /i</string>
+      <string>[^aeiou]-&gt;C /i</string>
+      <string>[\u0027\u002a\u2018\u2019\u201c\u201d\u0303\u0304\u0310\u0314\u0325\u200c\u200d\uE03C\uFFFD]-&gt;</string>
+     </ArrayOfString>
+    </value>
+   </setting>
+   <setting name="RecentCustomTransliterators" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      <string>NFD; [:Nonspacing Mark:] Remove; NFC</string>
+      <string>Any-Latin; NFD; [:Nonspacing Mark:] Remove; NFC</string>
+     </ArrayOfString>
+    </value>
+   </setting>
+  </IcuEC.Properties.Settings>
 	</userSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
