ICU has a bug in it (or our C++ implementation for it, which I can't make work) that makes it so that it won't properly process certain characters in UTF-8 (see the TestICURegex.cpp for details). I added an EncConverter wrapping the .Net Regex engine.

--- a/src/EncCnvtrs/EncCnvtrs 2010.csproj
+++ b/src/EncCnvtrs/EncCnvtrs 2010.csproj
@@ -222,6 +222,14 @@
     </Compile>
     <Compile Include="FallbackEncConverter.cs" />
     <Compile Include="FallbackEncConverterConfig.cs" />
+    <Compile Include="NetRegexAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NetRegexEncConverterConfig.cs" />
+    <Compile Include="NetRegexEncConverter.cs" />
+    <Compile Include="NetRegexAutoConfigDialog.Designer.cs">
+      <DependentUpon>NetRegexAutoConfigDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="IEncConverterConfig.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -298,6 +306,9 @@
     <EmbeddedResource Include="FallbackAutoConfigDialog.resx">
       <SubType>Designer</SubType>
       <DependentUpon>FallbackAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NetRegexAutoConfigDialog.resx">
+      <DependentUpon>NetRegexAutoConfigDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ImplTypeList.resx">
       <DependentUpon>ImplTypeList.cs</DependentUpon>
