--- a/src/EncCnvtrs/app.config
+++ b/src/EncCnvtrs/app.config
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-	</configSections>
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="SilEncConverters40.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
@@ -13,4 +16,17 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+ <userSettings>
+  <SilEncConverters40.Properties.Settings>
+   <setting name="RecentRegExpressions" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      <string>{[aeiou]}-&gt;{V};1</string>
+      <string>{[^aeiou]}-&gt;{C};1</string>
+      <string>{[\u0027\u002a\u2018\u2019\u201c\u201d\u0303\u0304\u0310\u0314\u0325\u200c\u200d\uE03C\uFFFD]}-&gt;{};</string>
+     </ArrayOfString>
+    </value>
+   </setting>
+  </SilEncConverters40.Properties.Settings>
+ </userSettings>
 </configuration>
