--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -253,6 +253,24 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Api.Gax">
+      <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Api.Gax.Rest">
+      <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Apis">
+      <Version>1.62.1</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Apis.Auth">
+      <Version>1.62.1</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Apis.Core">
+      <Version>1.62.1</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Apis.Translate.v2">
+      <Version>1.62.0.875</Version>
+    </PackageReference>
     <PackageReference Include="Google.Cloud.Translation.V2">
       <Version>3.2.0</Version>
     </PackageReference>
@@ -270,6 +288,9 @@
     </PackageReference>
     <PackageReference Include="System.ComponentModel.Annotations" Condition="('$(OS)'=='Windows_NT')">
       <Version>6.0.0-preview.4.21253.7</Version>
+    </PackageReference>
+    <PackageReference Include="System.Diagnostics.DiagnosticSource">
+      <Version>7.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Memory" Condition="('$(OS)'=='Windows_NT')">
       <Version>4.5.5</Version>
