--- a/Package.Release.nuspec
+++ b/Package.Release.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Encoding-Converters-Core</id>
-		<version>0.8.1</version>
+		<version>0.8.2</version>
 		<authors>Bob Eaton, Jim Kornelson, SIL International</authors>
 		<owners>jnaylor, sillsdev</owners>
 		<license type="expression">MIT</license>
@@ -10,7 +10,7 @@
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Libraries and merge modules for core encoding converter functionality.</description>
 		<releaseNotes>Includes managed DLL (for including in projects as nuget artifacts) in the .\lib\net48\... folder, and other managed and non-managed (read: non-nuget) resources that optionally may be manually added to projects or at least in installers in the .\runtimes\... folder -- including plugin definitions, tlb, and exe files for both Win32/x86 and x64. Some of the resources are also included in various merge modules in the .\installer\MergeModules... folder</releaseNotes>
-		<copyright>Copyright 2017-2023</copyright>
+		<copyright>Copyright 2017-2024</copyright>
 		<tags></tags>
 		<dependencies>
 			<group targetFramework=".NETFramework4.8" />
@@ -48,11 +48,11 @@
 			-->
 		
 		<file src=".\output\Win32\Release\*.dll" target="runtimes\EcDistFiles\win-x86\native" />
-		<file src=".\output\Win32\Release\*.dll.config" target="runtimes\EcDistFiles\win-x86\native" />
+		<file src=".\output\Win32\Release\*.config" target="runtimes\EcDistFiles\win-x86\native" />
 		<file src=".\output\Win32\Release\*.tlb" target="runtimes\EcDistFiles\win-x86\native" />
 		<file src=".\output\Win32\Release\*.exe" target="runtimes\EcDistFiles\win-x86\native" />
 		<file src=".\output\x64\Release\*.dll" target="runtimes\EcDistFiles\win-x64\native" />
-		<file src=".\output\x64\Release\*.dll.config" target="runtimes\EcDistFiles\win-x64\native" />
+		<file src=".\output\x64\Release\*.config" target="runtimes\EcDistFiles\win-x64\native" />
 		<file src=".\output\x64\Release\*.tlb" target="runtimes\EcDistFiles\win-x64\native" />
 		<file src=".\output\x64\Release\*.exe" target="runtimes\EcDistFiles\win-x64\native" />
 
