--- a/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
+++ b/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Azure.AI.OpenAI" version="1.0.0-beta.13" targetFramework="net48" />
-  <package id="Azure.Core" version="1.37.0" targetFramework="net48" />
+  <package id="Azure.Core" version="1.38.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
