--- a/src/PyScriptEC/PyScriptEC 2010.csproj
+++ b/src/PyScriptEC/PyScriptEC 2010.csproj
@@ -110,7 +110,9 @@
     <Compile Include="Py3ScriptAutoConfigDialog.Designer.cs">
       <DependentUpon>Py3ScriptAutoConfigDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="PyScriptAutoConfigDialog.cs" />
+    <Compile Include="PyScriptAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Py3ScriptEncConverter.cs" />
     <Compile Include="PyScriptAutoConfigDialog.Designer.cs">
       <DependentUpon>PyScriptAutoConfigDialog.cs</DependentUpon>
