--- a/src/TestEncCnvtrs/packages.config
+++ b/src/TestEncCnvtrs/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Google.Api.Gax" version="4.4.0" targetFramework="net48" />
   <package id="Google.Api.Gax.Rest" version="4.4.0" targetFramework="net48" />
@@ -10,13 +10,8 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="7.0.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Http" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Http.Polly" version="7.0.13" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NUnit" version="3.13.3" targetFramework="net48" />
