--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -19,11 +19,11 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-8.0.0.1" newVersion="8.0.0.1" />
+                <bindingRedirect oldVersion="0.0.0.0-8.0.0.2" newVersion="8.0.0.2" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -39,11 +39,11 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Extensions.Http.Polly" publicKeyToken="adb9793829ddae60" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-7.0.13.0" newVersion="7.0.13.0" />
+                <bindingRedirect oldVersion="0.0.0.0-8.0.2.0" newVersion="8.0.2.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -51,35 +51,39 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Text.Encodings.Web" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-1.66.0.0" newVersion="1.66.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-1.67.0.0" newVersion="1.67.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-1.66.0.0" newVersion="1.66.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-1.67.0.0" newVersion="1.67.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-1.66.0.0" newVersion="1.66.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-1.67.0.0" newVersion="1.67.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Google.Apis.Translate.v2" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-1.66.0.875" newVersion="1.66.0.875" />
+                <bindingRedirect oldVersion="0.0.0.0-1.67.0.875" newVersion="1.67.0.875" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Google.Api.Gax" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="Google.Api.Gax.Rest" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
+                <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.25.3.0" newVersion="3.25.3.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
@@ -137,6 +141,8 @@
                         <string>in the Devanagari script</string>
                         <string>using 'Yoda speak'</string>
                         <string>UseSystemPrompt: Translate from Hindi into English.</string>
+                        <string>UseSystemPrompt: You will be given one or more sentences in Khmer script. Your job is to transliterate them into the Latin script and return only the transliterated Latin result.</string>
+                        <string>UseSystemPrompt: You will be given one or more sentences in Tibetan script. Your job is to transliterate them into the International Phonetic Alphabet (IPA) and return only the transliterated IPA result.</string>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -147,9 +153,6 @@
                 <value />
             </setting>
             <setting name="NllbTranslatorPathToDockerProject" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="GoogleCloudVertexAiCredentials" serializeAs="String">
                 <value />
             </setting>
             <setting name="GoogleCloudVertexAiCredentialsOverride" serializeAs="String">
