--- a/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
+++ b/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Azure.AI.OpenAI" version="1.0.0-beta.13" targetFramework="net48" />
   <package id="Azure.Core" version="1.38.0" targetFramework="net48" />
@@ -10,9 +10,9 @@
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Memory.Data" version="8.0.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="7.0.0-preview.2.22152.2" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="8.0.1" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
