--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -278,25 +278,28 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Google.Api.Gax">
-      <Version>4.4.0</Version>
+      <Version>4.6.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Api.Gax.Rest">
-      <Version>4.4.0</Version>
+      <Version>4.6.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis">
-      <Version>1.66.0</Version>
+      <Version>1.67.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Auth">
-      <Version>1.66.0</Version>
+      <Version>1.67.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Core">
-      <Version>1.66.0</Version>
+      <Version>1.67.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Translate.v2">
-      <Version>1.66.0.875</Version>
+      <Version>1.67.0.875</Version>
     </PackageReference>
     <PackageReference Include="Google.Cloud.Translation.V2">
-      <Version>3.2.0</Version>
+      <Version>3.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Grpc.Core">
+      <Version>2.46.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Condition="('$(OS)'=='Windows_NT')">
       <Version>8.0.0</Version>
@@ -305,13 +308,13 @@
       <Version>8.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.1</Version>
+      <Version>8.0.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="System.ComponentModel.Annotations" Condition="('$(OS)'=='Windows_NT')">
-      <Version>6.0.0-preview.4.21253.7</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.DiagnosticSource">
       <Version>8.0.0</Version>
@@ -323,10 +326,10 @@
       <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.0-preview.2.22152.2</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json" Condition="('$(OS)'=='Windows_NT')">
-      <Version>8.0.1</Version>
+      <Version>8.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
